<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.posart.githubinfo.viewmodels.DetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        tools:context=".views.details.DetailsFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userPhoto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="30dp"
            app:civ_border_color="@color/secondaryColor"
            app:civ_border_width="1dp"
            imageUrl="@{viewModel.user.avatar_url}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username"
            style="@style/TextAppearance.AppCompat.Titles.Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="arturbruno17"
            android:text="@{viewModel.user.login}"
            app:layout_constraintBottom_toBottomOf="@+id/userPhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userPhoto"
            app:layout_constraintTop_toTopOf="@+id/userPhoto" />

        <TextView
            android:id="@+id/bio"
            style="@style/TextAppearance.AppCompat.Titles.Paragraph"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/grid_margin"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPhoto"
            android:text="@{viewModel.user.bio}"
            tools:text="Eu sou estudante de desenvolvimento android" />

        <ImageView
            android:id="@+id/personLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_margin"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/icon_person_content_description"
            android:src="@drawable/ic_person_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bio"
            app:tint="@color/secondaryColor" />

        <ImageView
            android:id="@+id/locationLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_margin"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/icon_location_content_description"
            android:src="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personLogo"
            app:tint="@color/secondaryColor" />

        <TextView
            android:id="@+id/followersAndFollowing"
            style="@style/TextAppearance.AppCompat.Titles.Paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:text="Seguidores: 7 · Seguindo: 7"
            app:layout_constraintBottom_toBottomOf="@+id/personLogo"
            app:layout_constraintStart_toEndOf="@+id/personLogo"
            app:layout_constraintTop_toTopOf="@+id/personLogo" />

        <TextView
            android:id="@+id/location"
            style="@style/TextAppearance.AppCompat.Titles.Paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:text="Barreira, Ceará, Brasil"
            android:text="@{viewModel.user.location}"
            app:layout_constraintBottom_toBottomOf="@+id/locationLogo"
            app:layout_constraintStart_toEndOf="@+id/locationLogo"
            app:layout_constraintTop_toTopOf="@+id/locationLogo" />

        <TextView
            android:id="@+id/repositoriesText"
            style="@style/TextAppearance.AppCompat.Titles.Title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_margin"
            android:layout_marginTop="50dp"
            android:text="@string/repositories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationLogo" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repositoriesText"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/repository" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>